--- a/style.css
+++ b/style.css
@@ -1,16 +1,22 @@
 body {
-    background-color: #323031;
-    color: #fff;
+  background-color: #323031;
+  color: #fff;
 }
 
 .clock {
-    font-size: 3em;
-    margin: 200px auto;
-    text-align: center;
-    color: #ea7317;
+  font-size: 3em;
+  margin: 200px auto;
+  text-align: center;
+  color: #ea7317;
 }
 
 .clock span {
-    padding: 20px;
-    background-color: #0e0c0d;
+  padding: 20px;
+  background-color: #0e0c0d;
+}
+
+@media all and (max-width: 400px) {
+  .clock {
+    font-size: 1.5em;
+  }
 }
